[package]
name = "y2017"
version = "0.1.0"
authors = ["Michael Gerhäuser <michael.gerhaeuser@methodpark.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 3      # controls the `--opt-level` the compiler builds with.
                   # 0-1 is good for debugging. 2 is well-optimized. Max is 3.
                   # 's' attempts to reduce size, 'z' reduces size even more.

[profile.release]
opt-level = 3

[dependencies]
itertools = "0.10.0"
regex = "1.4.2"
lazy_static = "1.4.0"
